--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,11 @@
         font-family: "MEGAPIX";
         src: url("assets/fonts/MEGAPIX.TTF");
       }
+
+      @font-face {
+          font-family: "Mister Pixel";
+          src: url("assets/fonts/Mister Pixel Regular.otf");
+      }
     </style>
   </head>
   <body>
