--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
       <!-- This contains stats about the game for development purposes, such as the average update time -->
       <div id="stats" hidden>
         <canvas id="stats-canvas"></canvas>
-        <select name="Display" id="chart-option"></select>
+        <label for="chart-option">Display</label><select name="Display" id="chart-option"></select>
         <div id="stats-display"></div>
       </div>
     </div>
-    <script src="bundle.js"></script>
+    <script src="src/main.ts" type="module"></script>
   </body>
 </html>
