eslint and prettier

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       }
 
       @font-face {
-          font-family: "Mister Pixel";
-          src: url("assets/fonts/Mister Pixel Regular.otf");
+        font-family: "Mister Pixel";
+        src: url("assets/fonts/Mister Pixel Regular.otf");
       }
     </style>
   </head>
@@ -66,7 +66,8 @@
       <!-- This contains stats about the game for development purposes, such as the average update time -->
       <div id="stats" hidden>
         <canvas id="stats-canvas"></canvas>
-        <label for="chart-option">Display</label><select name="Display" id="chart-option"></select>
+        <label for="chart-option">Display</label
+        ><select name="Display" id="chart-option"></select>
         <div id="stats-display"></div>
       </div>
     </div>
