--- a/benchmark2/index.html
+++ b/benchmark2/index.html
@@ -70,6 +70,6 @@
         <div id="stats-display"></div>
       </div>
     </div>
-    <script src="bundle.js"></script>
+    <script type="module" src="bundle.js"></script>
   </body>
 </html>
