--- a/benchmark3/index.html
+++ b/benchmark3/index.html
@@ -50,6 +50,7 @@
         src: url("assets/fonts/Mister Pixel Regular.otf");
       }
     </style>
+    <script type="module" crossorigin src="/assets/main-BgrusdZ5.js"></script>
   </head>
   <body>
     <div id="main">
@@ -71,6 +72,5 @@
         <div id="stats-display"></div>
       </div>
     </div>
-    <script src="/assets/main-BgrusdZ5.js"></script>
   </body>
 </html>
